tests/snapshots/file@base@call@nil.lox.snap
---
source: tests/common/mod.rs
description: "nil(); // expect runtime error: Can only call functions and classes.\n"
input_file: crafting_interpreters_test_files/call/nil.lox
---
OUT: 

===
ERR: 
  × can only call functions and classes
   ╭────
 1 │ nil(); // expect runtime error: Can only call functions and classes.
   ·    ┬
   ·    ╰── here
   ╰────
